# openMP-Examples

./: .gitignore  CMakeLists.txt  Makefile  README  astyle.config  dotprod_omp.cpp  matxvec_sparse.cpp  vector_add.cpp
dotprod/: CMakeLists.txt  dotprod_omp.cpp
matxvec_sparse/: CMakeLists.txt  matxvec_sparse.cpp
tests/: matxvec_sparse.sh
vector_add/: CMakeLists.txt
